# hexlet

./: .travis.yml  README.md
python-project-lvl1/: .flake8  .gitignore  Makefile  README.md  pyproject.toml  setup.py
python-project-lvl1/brain_games/: cli.py  engine.py
python-project-lvl1/brain_games/games/: calc.py  even.py  gcd.py  prime.py  progression.py
python-project-lvl1/brain_games/scripts/: brain_calc.py  brain_even.py  brain_gcd.py  brain_prime.py  brain_progression.py
python-project-lvl2/: .gitignore  .travis.yml  Makefile  README.md  pyproject.toml
python-project-lvl2/gendiff/: cli.py  config.py  core.py  deserializer.py  engine.py  serializer.py
python-project-lvl2/gendiff/scripts/: gendiff.py
python-project-lvl2/gendiff/serializers/: dictionary.py  json.py  plain.py
python-project-lvl2/tests/: test_cli.py  test_core_diff.py  test_deserializer.py  test_engine_diff.py  test_integration.py  test_serializer.py  test_unit_serializer_dictionary.py  test_unit_serializer_plain.py
python-project-lvl2/tests/fixtures/: a.json  a.yaml  b.json  b.yaml  c.json  case1_after.json  case1_after.yaml  case1_before.json  case1_before.yaml  case1_expected_dictionary.txt  case1_expected_json.txt  case1_expected_plain.txt  d.json  wrong.yaml
python-project-lvl3/: .gitignore  Makefile  pyproject.toml
python-project-lvl3/page_loader/: __main__.py  cli.py  config.py  core.py  fetcher.py  keeper.py
python-project-lvl3/page_loader_source/: index.html
python-project-lvl3/tests/: test_cli.py  test_core.py  test_fetcher.py  test_keeper.py  tmpdir.py
python-project-lvl3/tests/data/: index.html
