[tool.poetry]
name = "merkushov_brain_games"
version = "0.1.0"
description = "Hexlet.io test project (level1)"
authors = ["Victor Merkushov <merkushov.victor@gmail.com>"]
packages = [
  { include = "brain_games" },
]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
