[tool.poetry]
name = "merkushov_gendiff"
version = "0.1.0"
description = "Application for comparing two files (Hexlet.io test project, level2)"
authors = ["Victor Merkushov <merkushov.victor@gmail.com>"]
packages = [
  { include = "gendiff" },
]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.3"

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
