[tool.poetry]
name = "merkushov_page_loader"
version = "0.1.0"
description = "Page loader project on hexlet"
repository = "https://github.com/merkushov/hexlet/tree/master/python-project-lvl3"
authors = ["Victor Merkushov <merkushov.victor@gmail.com>"]
packages = [
    { include = "page_loader" }
]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.3"
pytest = "^4.6"

[tool.poetry.scripts]
page-loader = "page_loader"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
